--- a/wp-content/themes/daddytales/src/scss/header/nav.scss
+++ b/wp-content/themes/daddytales/src/scss/header/nav.scss
@@ -201,7 +201,11 @@
 
         &.current-menu-item {
             & > a {
-                color: $light
+                color: $brand-violet;
+
+                @media (min-width: $grid-xl) {
+                    color: $light
+                }
             }
         }
 
