--- a/wp-content/themes/daddytales/src/scss/slidestale/single.scss
+++ b/wp-content/themes/daddytales/src/scss/slidestale/single.scss
@@ -84,7 +84,8 @@
         border-radius: $radius;
         border: 1px solid $dark;
         box-shadow: $shadow;
-        margin-bottom: $spacer-md
+        margin-bottom: $spacer-md;
+        cursor: pointer
     }
 
     &__text {
@@ -94,6 +95,69 @@
 
         @media all and (min-width: $grid-xl) {
             padding: 0 15%
+        }
+    }
+}
+
+.popup-slider {
+    padding: 100px 0;
+
+    &-wrapper {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.95);
+        overflow-y: auto;
+        z-index: 100
+    }
+
+    &__close {
+        position: fixed;
+        top: 0;
+        right: 0;
+        cursor: pointer;
+        width: 40px;
+        height: 40px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: rgba(0, 0, 0, 0.5);
+
+        &:hover {
+            i {
+                color: $brand-violet
+            }
+        }
+
+        i {
+            font-size: $fs-xl;
+            color: $white;
+            transition: color ease-out $tr
+        }
+    }
+
+    .slidestales-slide {
+        margin-bottom: 100px;
+
+        &:last-child {
+            margin-bottom: 0
+        }
+
+        &-inner {
+            min-width: 70vw;
+            max-width: 85vw;
+
+            @media all and (min-width: $grid-xl) {
+                min-width: 50vw;
+                max-width: 70vw
+            }
+        }
+
+        &__text {
+            padding: 0;
+            color: $white
         }
     }
 }
